--- a/src/tokensearch.css
+++ b/src/tokensearch.css
@@ -9,6 +9,7 @@
     font-family: "Courier", Times, sans-serif;
     border: solid 2px #DFDFDF;
     border-radius: 10px;
+    cursor: text;
 }
 .ts-token {
     background: #5c7db7;
@@ -17,6 +18,9 @@
     float: left;
     border-radius: 4px;
     cursor: pointer;
+}
+.ts-token-sel {
+    background: #0c7db7;
 }
 .ts-tokenlabel {
     float: left;
